@@ -1,3 +1,7 @@
+2011-05-13  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/frames.jl: add possibility to also change the
+	font-color for highlighted and clicked frames
+
 2011-05-05  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/commands/jump-or-exec.jl: reverted 2 commits
 
